--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Please open it and click the button inside to confirm your subscription.</p>
                 </div>
                 <div class="formsubbmit-btn">
-                    <button type="submit" class="btn-submit" id="submitBtn">  Dismiss message</button>
+                    <button type="submit" class="btn-submit" id="Dismiss">  Dismiss message</button>
                 </div>
         </div>
     </section>
